<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:layout_marginTop="@dimen/margin"
    android:clickable="false"
    android:descendantFocusability="blocksDescendants"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="16dp">

    <LinearLayout style="@style/LinerLayoutListItem">

        <TextView
            android:id="@+id/name_text_view"
            style="@style/LabelTextStyle"
            android:text="@string/product_name_text" />

        <TextView
            android:id="@+id/name"
            style="@style/InformationTextStyle"
            tools:text="Product name" />

    </LinearLayout>

    <LinearLayout style="@style/LinerLayoutListItem">

        <TextView
            android:id="@+id/price_text_view"
            style="@style/LabelTextStyle"
            android:text="@string/product_price_text" />

        <TextView
            android:id="@+id/price"
            style="@style/InformationTextStyle"
            tools:text="44$" />

    </LinearLayout>

    <LinearLayout style="@style/LinerLayoutListItem">

        <TextView
            android:id="@+id/quantity_text_view"
            style="@style/LabelTextStyle"
            android:text="@string/product_quantity_text" />

        <TextView
            android:id="@+id/quantity"
            style="@style/InformationTextStyle"
            tools:text="34 pieces" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="@dimen/padding">

        <Button
            android:id="@+id/saleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/sale_button_text"
            android:theme="@style/ButtonStyle" />

    </RelativeLayout>

</LinearLayout>